--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,10 @@ manifest {
   nextflowVersion = '>=23.10.0'
 }
 
+plugins {
+  id 'nf-snowflake@0.5.0'
+}
+
 /* 
  * default params 
  */
@@ -78,6 +82,14 @@ profiles {
     workDir = 's3://nextflow-ci/work'
     aws.region = 'eu-west-1'
     aws.batch.cliPath = '/home/ec2-user/miniconda/bin/aws'
+  }
+
+  snowflake {
+    process.executor = 'snowflake'
+    snowflake {
+      computePool = 'HYU_POOL2'
+      runtimeStage = 'NXF_RUNTIME'
+    }
   }
 
   's3-data' {
