--- a/nextflow.config
+++ b/nextflow.config
@@ -17,7 +17,7 @@ manifest {
 }
 
 plugins {
-  id 'nf-snowflake'
+  id 'nf-snowflake@0.6.0'
 }
 
 /* 
@@ -87,7 +87,7 @@ profiles {
   snowflake {
     process.executor = 'snowflake'
     snowflake {
-      computePool = 'HYU_POOL2'
+      computePool = 'NEXTFLOW_CP'
       runtimeStage = 'NXF_RUNTIME'
     }
   }
