--- a/nextflow.config
+++ b/nextflow.config
@@ -88,7 +88,7 @@ profiles {
     process.executor = 'snowflake'
     snowflake {
       computePool = 'NEXTFLOW_CP'
-      runtimeStage = 'NXF_RUNTIME'
+      stageMounts = '@nxf_runtime:/config/runtime,@nxf_results:/config/results'
     }
   }
 
