--- a/nextflow.config
+++ b/nextflow.config
@@ -86,6 +86,8 @@ profiles {
 
   snowflake {
     process.executor = 'snowflake'
+    snowflake.computePool = 'NEXTFLOW_CP'
+    snowflake.stageMounts = '@NXF_WORKDIR:/mnt/workdir,@NXF_RESULTS:/mnt/results'
   }
 
   's3-data' {
