--- a/nextflow.config
+++ b/nextflow.config
@@ -87,7 +87,7 @@ profiles {
   snowflake {
     process.executor = 'snowflake'
     snowflake.computePool = 'NEXTFLOW_CP'
-    snowflake.stageMounts = '@NXF_RESULTS:/mnt/results'
+    snowflake.stageMounts = '@NXF_RESULTS:/results'
   }
 
   's3-data' {
