--- a/nextflow.config
+++ b/nextflow.config
@@ -88,6 +88,7 @@ profiles {
     process.executor = 'snowflake'
     snowflake.computePool = 'NEXTFLOW_CP'
     snowflake.stageMounts = '@NXF_RESULTS:/results'
+    snowflake.workDirStage = '@NXF_WORKDIR'
   }
 
   's3-data' {
