--- a/nextflow.config
+++ b/nextflow.config
@@ -87,8 +87,11 @@ profiles {
   snowflake {
     process.executor = 'snowflake'
     snowflake.computePool = 'NEXTFLOW_CP'
-    snowflake.stageMounts = '@NXF_RESULTS:/results'
+    snowflake.stageMounts = '@NXF_RESULTS:/results,@NXF_INPUT:/mnt/input'
     snowflake.workDirStage = '@NXF_WORKDIR'
+    params.reads = '/mnt/input/data/ggal/ggal_gut_{1,2}.fq'
+    params.transcriptome = '/mnt/input/data/ggal/ggal_1_48850000_49020000.Ggal71.500bpflank.fa'
+    params.multiqc = '/mnt/input/multiqc'
   }
 
   's3-data' {
