--- a/nextflow.config
+++ b/nextflow.config
@@ -17,7 +17,7 @@ manifest {
 }
 
 plugins {
-  id 'nf-snowflake@0.6.1'
+  id 'nf-snowflake@0.7.0'
 }
 
 /* 
@@ -92,6 +92,7 @@ profiles {
     params.reads = '/mnt/input/data/ggal/ggal_gut_{1,2}.fq'
     params.transcriptome = '/mnt/input/data/ggal/ggal_1_48850000_49020000.Ggal71.500bpflank.fa'
     params.multiqc = '/mnt/input/multiqc'
+    params.outdir = "/results"
   }
 
   's3-data' {
