--- a/nextflow.config
+++ b/nextflow.config
@@ -17,7 +17,7 @@ manifest {
 }
 
 plugins {
-  id 'nf-snowflake@0.7.1'
+  id 'nf-snowflake@0.8.0'
 }
 
 /* 
@@ -89,6 +89,7 @@ profiles {
     snowflake.computePool = 'NEXTFLOW_CP'
     snowflake.stageMounts = 'NXF_RESULTS:/results,NXF_INPUT:/mnt/input'
     snowflake.workDirStage = 'NXF_WORKDIR'
+    snowflake.driverImage = '/hyu/public/nf_repo/nf-snowflake:0.8.0'
     params.reads = '/mnt/input/data/ggal/ggal_gut_{1,2}.fq'
     params.transcriptome = '/mnt/input/data/ggal/ggal_1_48850000_49020000.Ggal71.500bpflank.fa'
     params.multiqc = '/mnt/input/multiqc'
